--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
 
     <div class="hint" id="hint">Be honest 😇</div>
-    <div class="success" id="successMsg">YAY HAPPY VALENTINE 💖🥳</div>
+    <div class="success" id="successMsg">Happy Valentine J'lynn💖🥳</div>
   </div>
 
   <script>
@@ -225,4 +225,5 @@
   </script>
 </body>
 </html>
+
 
